Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3996

Can not build debugger helper with Qt 4.7.2 PPC+x86 UB install

XMLWordPrintable

      With a Qt 4.7.2 built with PPC, x86, and x86_64 ABI, Creator fails to build debug helper. It reports "The Qt Version has no toolchain." in the log.

      In the toolchains preferences, gcc is detected as x86 64bit and x86 32bit. It's missing PPC even when it can build projects with PPC output.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            stephenju Stephen Chu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes