GCC: Better targetAbi support

* Save ABI in toolchain
* have guessGccAbi return a list of possible matches.

Tasknumber: QTCREATORBUG-3996
Reviewed-by: dt